syntax = "proto3";
package Greeter;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

enum Sex {
  MALE = 0;
  FEMALE = 1;
}

message HelloRequest {
  string name = 1;
  repeated string hobby = 2;
  Sex sex = 3;
  map <string, string> Mp = 4;
}

message HelloReply {
  string message = 1;
  repeated string hobby = 2;
  Sex sex = 3;
  map <string, string> Mp = 4;
}

// 生成命令   protoc --php_out=. helloworld.proto
